include(FetchContent)

FetchContent_Declare(
  Catch2
  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
  GIT_TAG        v3.4.0 # or a later release
)

FetchContent_MakeAvailable(Catch2)

set(SOURCES 
    ${PROJECT_SOURCE_DIR}/tests/test_array.cpp
)

add_executable(test ${SOURCES})
target_link_libraries(test PUBLIC data_structures)
target_link_libraries(test PRIVATE Catch2::Catch2WithMain)

list(APPEND CMAKE_MODULE_PATH ${catch2_SOURCE_DIR}/extras)
include(CTest)
include(Catch)
catch_discover_tests(test)
